@@ -523,13 +523,11 @@ domain "localhost.DEFAULT" {
 #           }
 #           search {
 #               uri = "ldap:///ou=People,dc=umich,dc=edu?*?sub?uid=%25s";
-#               rdnpref = false;
 #               # <ALL|USER|GROUP>
 #               type = user;
 #           }
 #           search {
 #               uri = "ldap:///ou=People,dc=umich,dc=edu?*?sub?cn=%25s"
-#               rdnpref = false;
 #               type = user;
 #           }
 #           # List of attributes to retrieve; if not set, all attributes are
